--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <!--<string name="fragment_map_tv">지도</string>-->
     <string name="fragment_sos_tv">SOS</string>
     <string name="setting">설정</string>
+    <string name="info_message">예상치 못한 상황, \n인타임으로 미리 대비하세요</string>
+    <string name="how_to_aed">자동심장충격기사용법</string>
+    <string name="how_to_cpr">심폐소생술</string>
+    <string name="how_to_disaster">재난상황대처법</string>
+    <string name="how_to_checklist">체크리스트</string>
 </resources>
