--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,14 @@
     <string name="how_to_cpr">심폐소생술</string>
     <string name="how_to_disaster">재난상황대처법</string>
     <string name="how_to_checklist">체크리스트</string>
+
+    <!--SOS-->
     <string name="txt_select_num">긴급 문자를 전송할 번호를 선택해 주세요</string>
     <string name="txt_sms">다음과 같이 긴급 문자를 보냅니다</string>
     <string name="txt_amb">민간 구급차가 필요하신가요?</string>
+    <string name="btn_119">119</string>
+    <string name="btn_112">112</string>
+    <string name="btn_fav">즐겨찾</string>
+    <string name="img_sms">긴급문자</string>
+    <string name="btn_amb">민간구급차</string>
 </resources>
