--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,39 @@
     <string name="how_to_disaster">재난상황대처법</string>
     <string name="how_to_checklist">체크리스트</string>
 
+    <!-- how to use AED Page Texts -->
+    <string name="info_aed_title">자동심장충격기(AED)</string>
+    <string name="info_aed_description">자동심장충격기(AED)란 환자들에게 극히 짧은 순간에 강한 전류를 심장에 통과시켜서 심장이 다시 정상적인 전기활동을 할 수 있도록 유도하는 것</string>
+    <string name="info_aed_picture">iv_aed_picture</string>
+    <string name="info_iv_bar_design">iv_bar_design</string>
+    <string name="info_aed_subtitle">자동심장충격기(AED) 사용법</string>
+    <string name="info_iv_aed_desc_number">info_iv_aed_desc_number</string>
+    <string name="info_tv_aed_step1_header">전원켜기</string>
+    <string name="info_tv_aed_step1">자동심장충격기(AED)를 심폐소생술에 방해가 되지 않는 위치에 놓은 뒤에 전원 버튼을 눌러 전원을 켠다.</string>
+    <string name="info_tv_aed_step2_header">패드 부착</string>
+    <string name="info_tv_aed_pad_desc">패드1 : 오른쪽 빗장뼈 바로 아래 부착 \n패드2 : 왼쪽 젖꼭지 옆 겨드랑이 부착</string>
+    <string name="info_tv_aed_step2">준비된 자동심장충격기(AED)의 패드를 부착부위에 정확히 부착한다.</string>
+    <string name="info_tv_aed_step2warning_header">패드 부착 시 주의사항</string>
+    <string name="info_tv_aed_step2warning1">
+        • 패드와 자동심장충격기 본체가 분리되어 있는 경우 연결하며, 패드 부착부위에 이물질이 있다면 제거한다.
+    </string>
+    <string name="info_tv_aed_step2warning2">
+        • "분석 중...." 이라는 음성 지시가 나오면 심폐소생술을 멈추고 환자에게서 손을 뗀다.
+    </string>
+    <string name="info_tv_aed_step2warning3">
+        • 자동심장충격이 필요 없는 경우에는 "환자의 상태를 확인하고, 심폐소생술을 계속 하십시오" 라는 음성 지시가 나온다.
+    </string>
+    <string name="info_tv_aed_step2warning4">
+        • 쇼크버튼을 누르기 전에는 반드시 다른 사람이 환자에게서 떨어져 있는지 확인하여야 한다.
+    </string>
+    <string name="info_tv_aed_step3_header">심폐소생술 실시</string>
+    <string name="info_iv_aed_compression_picture">info_iv_aed_compression_picture</string>
+    <string name="info_tv_aed_step3">자동심장충격을 시행한 뒤에는 즉시 가슴압박과 인공호흡 비율을 30 : 2로 심폐소생술을 다시 시행한다.</string>
+    <string name="info_tv_cpr_clickable">심폐소생술 방법 바로 알아보기 ></string>
+    <string name="info_tv_aed_step3reminder">* 자동심장충격기는 2분마다 심장리듬 분석을 반복해서 시행하며, 자동심장충격기 사용과 심폐소생술 시행은 119구급대가 현장에 도착할 때까지 지속되어야 한다.</string>
+    <string name="info_iv_aed_copyright">2013(c)All rights Reserved National Emergency Medical Center</string>
+
+
     <!--SOS-->
     <string name="txt_select_num">긴급 문자를 전송할 번호를 선택해 주세요</string>
     <string name="txt_sms">다음과 같이 긴급 문자를 보냅니다</string>
