--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">INTIME</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_info_tv">정보</string>
     <!--<string name="fragment_map_tv">지도</string>-->
@@ -11,6 +10,9 @@
     <string name="how_to_cpr">심폐소생술</string>
     <string name="how_to_disaster">재난상황대처법</string>
     <string name="how_to_checklist">체크리스트</string>
+
+    <string name="confirm">확인</string>
+    <string name="cancel">취소</string>
 
     <!-- how to use AED Page Texts -->
     <string name="info_aed_title">자동심장충격기(AED)</string>
@@ -45,17 +47,23 @@
     <string name="info_iv_copyright">2013(c)All rights Reserved National Emergency Medical Center</string>
 
 
-    <string name="confirm">확인</string>
-    <string name="cancel">취소</string>
     <!--SOS-->
-    <string name="txt_select_num">긴급 문자를 전송할 번호를 선택해 주세요</string>
-    <string name="txt_sms">다음과 같이 긴급 문자를 보냅니다</string>
-    <string name="txt_amb">민간 구급차가 필요하신가요?</string>
-    <string name="btn_119">119</string>
-    <string name="btn_112">112</string>
-    <string name="btn_fav">비상연락처</string>
-    <string name="img_sms">긴급문자</string>
-    <string name="btn_amb">민간구급차</string>
+    <string name="sos_txt_select_num">긴급 문자를 전송할 번호를 선택해 주세요</string>
+    <string name="sos_txt_sms">다음과 같이 긴급 문자를 보냅니다</string>
+    <string name="sos_txt_amb">민간 구급차가 필요하신가요?</string>
+    <string name="sos_btn_119">119</string>
+    <string name="sos_btn_112">112</string>
+    <string name="sos_btn_fav">비상연락처</string>
+    <string name="sos_img_sms">긴급문자</string>
+    <string name="sos_btn_amb">민간구급차</string>
+    <string name="sos_amb_notice">\'인타임\'은 정보 중개자로 업체 전화 후 관련된 문제에 대한 의무와 책임은 각 업체에 있으며, 민간 구급차를 이용하면 금액이 부과됩니다. 이용 시 부과되는 이용료는 담당 업체마다 상이합니다.</string>
+    <string name="sos_amb_tel">전화걸기</string>
+
+
+    <!--setting-->
+    <string name="setting_title">인타임 관리</string>
+    <string name="setting_tel">비상연락처</string>
+    <string name="setting_fav">즐겨찾기</string>
 
     <!--How to CPR page texts:-->
     <string name="info_iv_cpr_desc_numbering">info_iv_cpr_desc_numbering</string>
