--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="how_to_disaster">재난상황대처법</string>
     <string name="how_to_checklist">체크리스트</string>
 
+    <string name="all">전체</string>
+    <string name="aed">심장충격기</string>
+    <string name="shelter">대피소</string>
+    <string name="emergency">응급실</string>
+    <string name="pharmacy">24시 약국</string>
+
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
 
@@ -61,9 +67,10 @@
 
 
     <!--setting-->
-    <string name="setting_title">인타임 관리</string>
-    <string name="setting_tel">비상연락처</string>
+    <string name="setting_sub">인타임 관리</string>
+    <string name="setting_con">비상연락처</string>
     <string name="setting_fav">즐겨찾기</string>
+    <string name="setting_plus">연락처 추가</string>
 
     <!--How to CPR page texts:-->
     <string name="info_iv_cpr_desc_numbering">info_iv_cpr_desc_numbering</string>
