--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,30 @@
     <string name="info_tv_cpr_desc">위급상황시 ‘인타임’을 \n만들어 줄 수 있는 CPR 방법을 확인하세요!</string>
     <string name="info_tb_adult">성인</string>
     <string name="info_tb_child">소아</string>
+    <string name="info_tv_cpr_child_step1H">심정지 확인 후 도움 및 119 신고요청</string>
+    <string name="info_tv_cpr_child_step1_1">어깨를 흔들며 반응을 확인한다.</string>
+    <string name="info_tv_cpr_child_step1_2">* 1세 미만의 영아의 경우 발바닥을 때려 반응을 확인한다.</string>
+    <string name="info_tv_cpr_child_step1_3">반응이 없는 경우 주변에 사람에게 119 호출 및 자동심장충격기를 가져올 것을 요청한다.</string>
+    <string name="info_tv_cpr_child_step1_4">* 혼자인 경우 1분간 심폐소생술 시행 후 응급기관에 연락한다.</string>
+    <string name="info_tv_cpr_child_step2H">가슴압박 30회 실시</string>
+    <string name="info_iv_cpr_child_step2">info_iv_cpr_child_step2</string>
+    <string name="info_tv_cpr_summaryH">성인 가슴압박 소생술 응급처치</string>
+    <string name="info_tv_cpr_summary1">가슴(흉부)압박 \n흉골 1/2아래 부분을 손꿈치로 30회 압박한다.\n\n 성인은 5~6cm의 깊이로, 팔꿈치가 굽지 않게 옆에서 보았을때 90도가 될 수 있도록 압박한다. \n\n* 분당 100 ~ 120회의 속도로 가슴압박을 시행한다.</string>
+    <string name="info_tv_cpr_summary2H">적절한 가슴압박과 이완을 하는 이유</string>
+    <string name="info_tv_cpr_summary2">정확한 깊이로 가슴압박을 강하게 하면, 그만큼 피가 많이 짜여지게 되고, 압박한 만큼 이완시키면 다시 심장에 피가 되돌아오기 때문에 조금 더 효율적인 가슴압박이 이루어 질 수 있다.</string>
+    <string name="info_cpr_child_step2_1">•  압박할 위치는 양쪽 젖꼭지 부위를 잇는 선의 정중앙의 바로 아래부분이다.</string>
+    <string name="info_cpr_child_step2_2">•  한 손으로 손바닥의 아래 부위만을 환자의 흉골부위에 접촉시킨다.</string>
+    <string name="info_cpr_child_step2_3">•  시술자의 어깨는 환자의 흉골이 맞닿는 부위와 수직이 되게 위치한다.</string>
+    <string name="info_cpr_child_step2_4">•  한 손으로 1분당 100 ~ 120회 이상의 속도와 4 ~ 5cm 이상 깊이로 강하고 빠르게 30회 눌러준다.</string>
+    <string name="info_tv_cpr_step3H">영아에서의 흉부압박</string>
+    <string name="info_tv_cpr_child_step3">info_tv_cpr_child_step3</string>
+    <string name="info_cpr_child_step3_1">•  압박할 위치는 양쪽 젖꼭지 부위를 잇는 선 정 중앙의 바로 아래 부분이다.</string>
+    <string name="info_cpr_child_step3_2">•  검지와 중지 또는 중지와 약지 손가락을 모은 후 첫마디 부위를 환자의 흉골부위에 접촉시킨다.</string>
+    <string name="info_cpr_child_step3_3">•  시술자의 손가락은 환자의 흉골이 맞닿는 부위와 수직이 되게 위치한다.</string>
+    <string name="info_cpr_child_step3_4">•  1분당 100 ~ 120회 이상의 속도와 4cm 정도의 깊이로 강하고 빠르게 30회 눌러준다.</string>
+    <string name="info_tv_cpr_child_step4H">인공호흡 2회 실시</string>
+    <string name="info_tv_cpr_child_step4_1">호흡이 없으면 환아의 기도를 유지한채 1초 간 구조호흡을 한다. \n\n가슴이 올라 오는 정도를 본다. \n\n2회 연속 시행한다.</string>
+    <string name="info_tv_cpr_child_step4_2">* 소아의 경우 입 대 입, 영아(1세 미만)의 경우 입으로 입과 코를 막고 호흡을 한다.</string>
+    <string name="info_tv_cpr_child_step5H">가슴압박과 인공호흡을 반복</string>
+    <string name="info_tv_cpr_child_step5">30회의 가슴압박과 2회의 인공호흡을 119구급대원이 도착할 때까지 반복하여 시행한다.</string>
 </resources>
