- Completed disaster page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="info_tv_aed_step3">자동심장충격을 시행한 뒤에는 즉시 가슴압박과 인공호흡 비율을 30 : 2로 심폐소생술을 다시 시행한다.</string>
     <string name="info_tv_cpr_clickable">심폐소생술 방법 바로 알아보기 ></string>
     <string name="info_tv_aed_step3reminder">* 자동심장충격기는 2분마다 심장리듬 분석을 반복해서 시행하며, 자동심장충격기 사용과 심폐소생술 시행은 119구급대가 현장에 도착할 때까지 지속되어야 한다.</string>
-    <string name="info_iv_copyright">2013(c)All rights Reserved National Emergency Medical Center</string>
+    <string name="info_iv_copyright">2013©All rights Reserved National Emergency Medical Center</string>
 
 
     <!--SOS-->
@@ -128,4 +128,67 @@
     <string name="info_tv_cpr_child_step4_2">* 소아의 경우 입 대 입, 영아(1세 미만)의 경우 입으로 입과 코를 막고 호흡을 한다.</string>
     <string name="info_tv_cpr_child_step5H">가슴압박과 인공호흡을 반복</string>
     <string name="info_tv_cpr_child_step5">30회의 가슴압박과 2회의 인공호흡을 119구급대원이 도착할 때까지 반복하여 시행한다.</string>
+    <string name="info_tb_earthquake">지진 Earthquake 地震</string>
+    <string name="info_tb_typhoon">태풍 Typhoon 颱風</string>
+    <string name="info_tb_flood">홍수 Flood 洪水</string>
+    <string name="info_tb_forrestfire">산불 Wildfire 山火</string>
+    <string name="info_tb_fire">화재 Urban Fire 火災</string>
+    <string name="info_tv_wheninside">집안에 있을 경우</string>
+    <string name="info_tv_earthquake_subtitle">머리, 몸을 보호하는 것이 중요</string>
+    <string name="info_tv_earthquake_body">떨어지는 낙하물을 최대한 피할 수 있도록 튼튼한 <b>탁자 아래</b>에 들어가서 탁자 다리를 꼭 잡고 몸을 보호합니다.\n\n
+        흔들림이 멈추면 <b>가스와 전깃불을 차단</b>하고 문을 열어 <b>출구를 확보</b>한 후 (계단을 이용하여) 밖으로 나갑니다. (엘리베이터 사용 금지)\n\n
+        바깥에서 손이나 가방 등으로 머리를 보호하며, <b>운동장, 공원 등 넓은 공간으로 대피</b>합니다.\n\n
+        대피 장소에 도착한 후 라디오나 공공기관 등 <b>안내 방송</b>에 따라 행동합니다.</string>
+    <string name="info_tv_whenoutside">바깥에 있을 경우</string>
+    <string name="info_tv_earthquake_body2">1. 창문유리, 간판 등 낙하물을 주의하며 손이나 가방 등으로 머리를 보호합니다.\n\n
+        2. 가능한 한 건물로부터 멀리 떨어져 흔들림이 멈추면 운동장, 공원 등 넓은 공간으로 대피합니다.\n\n
+        3. 대피 장소에 도착한 후 라디오나 공공기관 등 안내 방송에 따라 행동합니다.</string>
+    <string name="info_tv_whenoccur">발생시</string>
+    <string name="info_tv_typhoon_body">1. 태풍이 불 때는 <b>외출을 최대한 삼가</b>고 집에 있습니다.\n\n
+        2. 정전 시는 사용 가능한 <b>손전등</b>을 준비하고 가족 간의 <b>비상연락방법</b>과 대피 방법을 미리 의논합니다.\n\n
+        3. 침수가 예상되는 건물의 <b>지하공간에는 주차하지 마시고</b>, 지하에 거주하고 계신 주민은 안전한 곳으로 대피합니다.\n\n
+        4. 건물의 간판, 전신주, 가로등 등 위험 시설물 주변으로 걸어가거나 접근하지 맙시다. 또한, 집 안팎의 전기수리를 하지 않습니다.\n\n
+        5. 아파트 등 고층건물 옥상, 지하실과 하수도 맨홀에 접근하지 않습니다. \n\n
+        6. 고층아파트 등 대형건물에 거주하고 계신 주민은 유리창이 깨지는 것을 방지하도록 젖은 신문지, 테이프 등을 창문에 붙이고 창문 가까이 접근하지 않습니다. \n\n
+        7. 모래주머니 등을 이용하여 물이 넘쳐서 흐르는 것을 막습니다. \n\n
+        8. 바람에 날아갈 물건이 집주변에 있다면 미리 제거합니다. \n\n
+        9. 도로에 있는 차량은 속도를 줄여서 운전합니다. \n\n
+        10. 태풍이 지나간 후 침수된 집안은 가스가 차 있을 수 있으니 환기한 후 들어가고 전기, 가스, 수도시설 안전점검을 받은 후 사용합니다.</string>
+    <string name="info_tv_flood_body">•  홍수피해가 예상될 경우 라디오나 TV, 인터넷을 통해 <b>기상변화</b>를 알아둡니다.\n\n
+        •  홍수 예상 시 <b>전기차단기</b>를 내리고 <b>가스 밸브</b>를 잠급니다.\n\n
+        •  홍수 우려 때 <b>피난</b> 가능한 <b>장소</b>와 <b>길</b>을 사전에 알아둡니다.\n\n
+        •  갑작스러운 홍수가 발생 시 <b>높은 곳</b>으로 신속하게 대피합니다.\n\n
+        •  바위나 자갈 등이 흘러내리기 쉬운 지역이나 <b>산사태</b>가 일어날 수 있는 지역에 가까이 가지 않습니다. \n\n
+        •  물에 잠긴 지역에서 <b>자동차</b>를 운전하지 않습니다. \n\n
+        •  지정된 대피소에 도착하면 반드시 <b>도착사실</b>을 알리고, 통제에 따라 행동합니다.\n\n
+        •  침수주택 가스·전기차단기, 수돗물이나 저장식수 등은 <b>안전조사가 끝난 후 사용</b>이 가능합니다.</string>
+    <string name="info_tv_prevention">예방법</string>
+    <string name="info_tv_forestfire_body1">1. 등산을 할 때에는 성냥이나 라이터 등 <b>화기물</b>을 소지하지 말것\n\n
+        2. 야영에서 취사시 지정된 장소에서만 하시고 취사후 <b>불씨 단속</b>을 철저히 할것\n\n
+        3. 불씨가 남아 있는 <b>담뱃불</b>은 절대 버리지 말것\n\n
+        4. <b>산림</b>과 인접된 곳에서는 논밭 두렁 태우기, 쓰레기 소각 등 <b>화기 취급하지 말것</b>\n\n
+        5. 달리는 <b>열차나 자동차</b>에서 창밖으로 <b>담뱃불</b>을 버리지 말것</string>
+    <string name="info_tv_forrestfire_body2">1. 산불이 발견되면 소방서(119)나 경찰서(112)에 신고합니다.\n\n
+        2. 초기의 <b>작은 산불</b>을 발견한 경우, 나뭇가지를 사용하여 두드리거나 덮어서 <b>진화</b>합니다.\n\n
+        3. 만약 초기 진화에 실패하면, 산불은 바람이 불어가는 쪽으로 확산되므로 <b>바람의 방향</b>을 감안하여 산불의 <b>진행경로에서 벗어납니다</b>.\n\n
+        4. 불길에 휩싸일 경우 당황하지 말고 침착하게 주위를 확인하여 <b>타버린 지역, 저지대, 수풀이 적은 지역, 도로, 바위 뒤</b> 등으로 대피합니다.\n\n
+        5. 산불구역보다 <b>높은 곳으로 가지 않고</b> 불에 타고 있는 곳으로부터 멀리 떨어집니다.\n\n
+        6. 대피할 시간적인 여유가 없을 때에는 <b>바람을 등지고</b> 주변의 낙엽, 나뭇가지 등을 신속히 제거한 후 <b>낮은 자세</b>로 엎드려 구조를 기다립니다.</string>
+    <string name="info_tv_fire_body1">1. 사전 전검 \n\n\n
+        •  눈으로 사용하지 않는 전열기구 코드 확;\n\n
+        •  가스레인지 감금 확인;\n\n
+        •  귀로는 평소에 나지 않던 이상한 소리 확인;\n\n
+        •  코로는 타는 냄새 확인;\n\n
+        •  행동으로는 조리중 자리를 비우지 않기.\n\n
+        •  남방기구 등 전열기구 사용시 주변에 탈수 있는 물건 두지 않기\n\n\n
+        2. 대피 훈련\n\n\n
+        •  대피 방번과 대피해서 만나는 장소 사전 약속하기;\n\n
+        •  비상 가방 만들어 두기;\n\n
+        •  비상 연락 전화번호 및 연락해야 할 대상 선정하기;</string>
+    <string name="info_tv_fire_body2">1. 불을 발견하면 우선 ‘불이야’하고 큰소리로 외쳐 주변에 있는 다른 사람들에게 알리고 화재경보 비상 벨을 누릅니다.\n\n
+        2. 가능하면 화재 초기에 소화기로 불을 끄도록 합니다. (소화기 사용법 참고)\n\n
+        3. 불을 끄지 못할 경우 밖으로 나갑니다. 엘리베이터 사용 금지이므로 계단을 이용하여 나갑니다. 아래 층으로 대피가 불가능한 때에는 옥상으로 대피합니다.\n\n
+        4. 연기가 많을 때에는 젖은 수건 등으로 코와 입을 가리며 몸을 낮추고 이동합니다.\n\n
+        5. 불길 속을 통과하기 전에 담요나 수건 등을 물에 적셔 몸과 얼굴을 감쌉니다.\n\n
+        6. 출구가 없으면 연기가 방안에 들어오지 못하도록 젖은 옷이나 수건으로 문틈을 막고 구조를 기다립니다. 119에 신고합니다.</string>
 </resources>
