--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
+    <string name="back">뒤로가기</string>
 
     <!-- how to use AED Page Texts -->
     <string name="info_aed_title">자동심장충격기(AED)</string>
@@ -222,7 +223,9 @@
     <string name="tv_onBoarding4h"><![CDATA[위급상황 <b>A to Z</b>\n <b>INTIME</b>]]></string>
     <string name="tv_onBoarding4b">위급상황을 빠르고, 쉽게,\n미리미리 대비할 수 있는 인타임!\n지금 바로 시작해보세요!</string>
 
-    <!--widgwt-->
-    <string name="appwidget_text">INTIME</string>
-    <string name="add_widget">위젯 추가하기</string>
+    <!--widget-->
+    <string name="widget_loc">현재위치</string>
+    <string name="widget_refresh">새로고침</string>
+    <string name="widget_cpr">CPR 방법</string>
+
 </resources>
