--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,5 +233,12 @@
     <!--checklist-->
     <string name="info_chk_title">위급상황 준비물</string>
     <string name="info_chk_contents">위급상황이 생겼을 때 잊지 말고 챙길 \n체크리스트를 인타임 함께 확인해보세요!</string>
+    <string name="info_chk_child">어린이</string>
+    <string name="info_chk_women">여성</string>
+    <string name="info_chk_medicine">상비약</string>
+    <string name="info_chk_pet">반려동물</string>
+    <string name="info_chk_valuables">귀중품</string>
+    <string name="info_chk_clothing">의류</string>
+    <string name="info_chk_etc">기타</string>
 
 </resources>
