--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,5 +233,7 @@
     <!--checklist-->
     <string name="info_chk_title">위급상황 준비물</string>
     <string name="info_chk_contents">위급상황이 생겼을 때 잊지 말고 챙길 \n체크리스트를 인타임 함께 확인해보세요!</string>
+    <string name="naverMapTextView">네이버 지도로 길찾기</string>
+    <string name="kakaoMapTextView">카카오맵으로 길찾기</string>
 
 </resources>
