--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="sos_btn_112">112</string>
     <string name="sos_btn_fav">비상연락처</string>
     <string name="sos_img_sms">긴급문자</string>
-    <string name="sos_btn_amb">민간구급차</string>
+    <string name="sos_btn_amb">서울시 민간 구급차 업체 번호</string>
     <string name="sos_amb_notice">\'인타임\'은 정보 중개자로 업체 전화 후 관련된 문제에 대한 의무와 책임은 각 업체에 있으며, 민간 구급차를 이용하면 금액이 부과됩니다. 이용 시 부과되는 이용료는 담당 업체마다 상이합니다.</string>
     <string name="sos_amb_tel">전화걸기</string>
     <string name="sos_amb_title">서울시 민간 구급차 업체 정보</string>
